--- a/src/components/SlideShow/slideShow.css
+++ b/src/components/SlideShow/slideShow.css
@@ -1,6 +1,6 @@
 .slideShow {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   /* display: flex; */
   position: relative;
   /* relative to the slideShow which has been positioned absolute */
