--- a/src/components/SlideShow/slideShow.css
+++ b/src/components/SlideShow/slideShow.css
@@ -6,6 +6,18 @@
   /* relative to the slideShow which has been positioned absolute */
 }
 
+.slideShow + .container {
+  padding: 1rem 2rem;
+}
+.proTrek__text {
+  font-family: "Lato", sans-serif;
+  line-height: 1.8;
+  font-weight: 300;
+  font-size: 1.125rem;
+  color: rgb(16, 13, 13);
+  width: 100%;
+  margin: 1.5rem 0;
+}
 .slideShow img {
   width: 100%;
   object-fit: contain;
@@ -18,4 +30,16 @@ section.smart {
   background-color: hsl(174, 72%, 91%);
   padding: 1rem 2rem;
   color: #fff;
+}
+
+@media (min-width: 768px) {
+  .slideShow + .container {
+    padding: 1rem 3rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .proTrek__text {
+    text-align: justify;
+  }
 }
