--- a/src/SitePages/ProTrek-Watches/proTrek.css
+++ b/src/SitePages/ProTrek-Watches/proTrek.css
@@ -1,3 +1,11 @@
+section#proTrek {
+  font-family: "Lato", sans-serif;
+}
+
+section#proTrek .itemCard {
+  padding: 1rem 2rem;
+}
+
 section#proTrek .itemCard .itemCard__priceAndText {
   padding: 1rem 1rem;
   display: inline-block;
@@ -37,9 +45,6 @@ section#proTrek .itemCard .itemCard__img {
 @media (min-width: 951px) {
   section#proTrek .proTrek__body > .container {
     grid-template-columns: repeat(4, 1fr);
-  }
-  section#proTrek .itemCard {
-    /* min-width: 300px; */
   }
 }
 @media (min-width: 1200px) {
