--- a/src/components/NavBar/NavMoreDetails/navMoreDetails.css
+++ b/src/components/NavBar/NavMoreDetails/navMoreDetails.css
@@ -2,8 +2,12 @@
   background-color: rgb(234, 242, 255);
   width: 200px;
   position: absolute;
-  top: 0;
+  top: 82px;
   display: none;
+  padding: 0.8rem 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  z-index: 101;
 }
 
 .navMoreDetails > * {
@@ -24,8 +28,9 @@
   padding: 0.1rem;
 }
 
-.navMoreDetails__productRegistration {
+.navMoreDetails__productRegistration > a {
   color: red;
+  text-decoration: none;
 }
 
 @media (min-width: 768px) {
@@ -62,6 +67,10 @@
 @media (min-width: 861px) {
   .navMoreDetails {
     left: calc(100vw - 300px - 0.2%);
+  }
+
+  .navMoreDetails__productRegistration {
+    display: none;
   }
 }
 @media (min-width: 893px) {
