--- a/src/components/PageNavLink/pageNav.css
+++ b/src/components/PageNavLink/pageNav.css
@@ -2,6 +2,7 @@
   width: 100%;
   background-color: var(--container-bg);
   padding: 0.5rem;
+  margin-bottom: 0.7rem;
   /* margin-bottom: 1rem; */
 }
 
@@ -49,5 +50,11 @@
 
   .pageNavLink > .container {
     /* padding: 0 3.5rem; */
+  }
+}
+
+@media (min-width: 1200px) {
+  .pageNavLink__parentPage {
+    padding-left: 0.4rem;
   }
 }
