--- a/src/components/SlideShow/slideShow.css
+++ b/src/components/SlideShow/slideShow.css
@@ -2,7 +2,7 @@
   width: 100%;
   /* height: 100vh; */
   /* display: flex; */
-  position: relative;
+  /* position: relative; */
   /* relative to the slideShow which has been positioned absolute */
 }
 
