--- a/src/SitePages/ProTrek-Watches/proTrek.css
+++ b/src/SitePages/ProTrek-Watches/proTrek.css
@@ -21,6 +21,7 @@ section#proTrek .itemCard .itemCard__text {
 section#proTrek .itemCard .itemCard__finalSection {
   border-top: 1px solid rgb(209, 204, 204);
   font-size: 0.9rem;
+  font-weight: 400;
 }
 
 section#proTrek .itemCard .itemCard__body {
