--- a/src/components/NavBar/NavMoreDetails/navMoreDetails.css
+++ b/src/components/NavBar/NavMoreDetails/navMoreDetails.css
@@ -3,13 +3,17 @@
   width: 200px;
   position: absolute;
   top: 82px;
-  display: none;
+  opacity: 0;
   padding: 0.8rem 0;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   z-index: 101;
 }
 
+/* only show in the inView class is included */
+.navMoreDetails.inView {
+  opacity: 1;
+}
 .navMoreDetails > * {
   padding: 0.5rem 0.8rem;
 }
@@ -33,57 +37,12 @@
   text-decoration: none;
 }
 
-@media (min-width: 768px) {
-  .navMoreDetails {
-    left: 455px;
-    display: block;
-  }
-}
-@media (min-width: 771px) {
-  .navMoreDetails {
-    left: calc(100vw - 315px - 0.1%);
-  }
-}
-@media (min-width: 788px) {
-  .navMoreDetails {
-    left: calc(100vw - 315px - 0.2%);
-  }
-}
-@media (min-width: 790px) {
-  .navMoreDetails {
-    left: calc(100vw - 315px - 0.5%);
-  }
-}
-@media (min-width: 806px) {
-  .navMoreDetails {
-    left: calc(100vw - 315px - 0.8%);
-  }
-}
-@media (min-width: 832px) {
-  .navMoreDetails {
-    left: calc(100vw - 315px - 1.8%);
-  }
-}
 @media (min-width: 861px) {
-  .navMoreDetails {
-    left: calc(100vw - 300px - 0.2%);
-  }
-
   .navMoreDetails__productRegistration {
     display: none;
   }
 }
-@media (min-width: 893px) {
-  .navMoreDetails {
-    left: calc(100vw - 306px - 0.2%);
-  }
-}
 
-@media (min-width: 901px) {
-  .navMoreDetails {
-    left: 590px;
-  }
-}
 @media (min-width: 902px) {
   .navMoreDetails {
     display: none;
