--- a/src/components/NavBar/NavSupportDetails/navSupportDetails.css
+++ b/src/components/NavBar/NavSupportDetails/navSupportDetails.css
@@ -2,14 +2,16 @@
   width: 360px;
   position: absolute;
   top: 82px;
-  left: calc(100vw - 409px);
-  /* border-left: 1px solid black; */
-  display: none;
+  opacity: 0;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   z-index: 101;
 }
 
+/* only show in the inView class is included */
+.navSupportDetails.inView {
+  opacity: 1;
+}
 .navSupportDetails__nav {
   list-style-type: none;
 
@@ -37,57 +39,4 @@
   font-size: 0.9rem !important;
   margin-left: auto;
   color: rgb(185, 179, 179);
-}
-
-@media (min-width: 768px) {
-  .navSupportDetails {
-    display: block;
-  }
-}
-
-@media (min-width: 861px) {
-  .navSupportDetails {
-    left: calc(100vw - 539px);
-  }
-}
-@media (min-width: 902px) {
-  .navSupportDetails {
-    left: calc(100vw - 485px);
-  }
-}
-@media (min-width: 942px) {
-  .navSupportDetails {
-    left: calc(100vw - 495px);
-  }
-}
-@media (min-width: 970px) {
-  .navSupportDetails {
-    left: calc(100vw - 515px);
-  }
-}
-@media (min-width: 1093px) {
-  .navSupportDetails {
-    left: calc(100vw - 515px - 2%);
-  }
-}
-@media (min-width: 1100px) {
-  .navSupportDetails {
-    left: calc(100vw - 515px - 3%);
-  }
-}
-@media (min-width: 1170px) {
-  .navSupportDetails {
-    left: calc(100vw - 515px - 4%);
-  }
-}
-@media (min-width: 1220px) {
-  .navSupportDetails {
-    left: calc(100vw - 515px - 5%);
-  }
-}
-
-@media (min-width: 1310px) {
-  .navSupportDetails {
-    left: calc(100vw - 645px);
-  }
 }
