--- a/src/components/Products/products.css
+++ b/src/components/Products/products.css
@@ -19,11 +19,17 @@
   padding: 1rem 0.8rem;
 }
 
-.products__moreDetails.isVisible {
-  display: block;
+.products__moreDetails.isVisible > .products__list {
+  height: 100%;
+  opacity: 1;
+  transition: all 0.4s ease-in;
 }
-.products__moreDetails.isHidden {
-  display: none;
+.products__moreDetails.isHidden > .products__list {
+  /* display: none; */
+  height: 0;
+  overflow: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-out;
 }
 
 .products__list {
