fixed slider for mobile-screens

--- a/src/SitePages/Corporate/corporate.css
+++ b/src/SitePages/Corporate/corporate.css
@@ -10,6 +10,7 @@
   padding-top: unset;
   padding-bottom: 1.5rem;
   margin-top: -0.7rem;
+  font-weight: normal;
 }
 
 .corporate__body > .container {
