changed finalSection font to resize on mobile Screens

--- a/src/SitePages/Corporate/corporate.css
+++ b/src/SitePages/Corporate/corporate.css
@@ -11,6 +11,7 @@
   padding-bottom: 1.5rem;
   margin-top: -0.7rem;
   font-weight: normal;
+  font-size: 0.9rem;
 }
 
 .corporate__body > .container {
