--- a/src/components/MobileSideBar/mobileSideBar.css
+++ b/src/components/MobileSideBar/mobileSideBar.css
@@ -13,6 +13,14 @@
   right: 0;
   z-index: 100;
   font-family: "Lato", sans-serif;
+  transition: all 0.5s;
+}
+
+.mobileSideBar.close {
+  transform: translateX(100%);
+}
+.mobileSideBar.open {
+  transform: translateX(0%);
 }
 
 .mobileSideBar__pageLink {
